funzioni api tarocche per imbrogliare il girolo

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,6 +43,10 @@ file.reference.cmutimelex.jar=freetts-1.2.2-bin/cmutimelex.jar
 file.reference.en_us.jar=freetts-1.2.2-bin/en_us.jar
 file.reference.freetts-jsapi10.jar=freetts-1.2.2-bin/freetts-jsapi10.jar
 file.reference.freetts.jar=freetts-1.2.2-bin/freetts.jar
+file.reference.gson-2.8.6.jar=lib/gson-2.8.6.jar
+file.reference.httpclient-4.5.13.jar=lib/httpclient-4.5.13.jar
+file.reference.httpcore-4.4.14.jar=lib/httpcore-4.4.14.jar
+file.reference.java-json.jar=lib/java-json.jar
 file.reference.jsapi.jar=freetts-1.2.2-bin/jsapi.jar
 file.reference.mbrola.jar=freetts-1.2.2-bin/mbrola.jar
 includes=**
@@ -57,7 +61,11 @@ javac.classpath=\
     ${file.reference.freetts-jsapi10.jar}:\
     ${file.reference.freetts.jar}:\
     ${file.reference.jsapi.jar}:\
-    ${file.reference.mbrola.jar}
+    ${file.reference.mbrola.jar}:\
+    ${file.reference.java-json.jar}:\
+    ${file.reference.httpclient-4.5.13.jar}:\
+    ${file.reference.gson-2.8.6.jar}:\
+    ${file.reference.httpcore-4.4.14.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
